# music-fes-backend

./: .editorconfig  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/collector/: __init__.py  base.py  dummy.py  google_search.py  registry.py  runner.py  serpapi.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  collection_log.py  music_festival.py  notification_log.py  notification_setting.py  search_keyword.py  source_site.py  user.py
app/notification/: mailer.py  runner.py
app/routers/: auth.py  collect.py  deps.py  festivals.py  notification_settings.py  search_keywords.py
app/schemas/: auth.py  collect.py  music_festival.py  notification_setting.py  search_keyword.py  user.py
app/services/: auth.py  festival.py  notification.py
